--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -179,14 +179,14 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionMemeCell" id="2gJ-F2-80e" customClass="CustomCollectionMemeCell" customModule="MemeMe" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionMemeCell" id="2gJ-F2-80e" customClass="MemeCollectionViewCell" customModule="MemeMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="160" height="125"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="160" height="125"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oV5-e1-i80">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oV5-e1-i80">
                                             <rect key="frame" x="8" y="8" width="144" height="109"/>
                                         </imageView>
                                     </subviews>
@@ -199,7 +199,7 @@
                                     <constraint firstAttribute="bottomMargin" secondItem="oV5-e1-i80" secondAttribute="bottom" id="ksl-Ga-uVr"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="memeImage" destination="oV5-e1-i80" id="iNG-5q-tUs"/>
+                                    <outlet property="memeImage" destination="oV5-e1-i80" id="8Y0-7n-VIk"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -232,7 +232,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TableMemeCell" id="3xH-Lh-sZz" customClass="CustomTableMemeCell" customModule="MemeMe" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TableMemeCell" id="3xH-Lh-sZz" customClass="MemeTableViewCell" customModule="MemeMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3xH-Lh-sZz" id="5f8-p4-zTg">
@@ -264,9 +264,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="bottomLabel" destination="sNE-MV-voz" id="W4C-BW-p2r"/>
-                                    <outlet property="memeImage" destination="PVE-sU-9qY" id="kQ9-27-9SF"/>
-                                    <outlet property="topLabel" destination="mCY-F7-MIm" id="cK5-wN-Vqj"/>
+                                    <outlet property="bottomLabel" destination="sNE-MV-voz" id="ndN-YX-RFB"/>
+                                    <outlet property="memeImage" destination="PVE-sU-9qY" id="sL5-17-ZrM"/>
+                                    <outlet property="topLabel" destination="mCY-F7-MIm" id="dGZ-8s-smb"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -375,6 +375,6 @@
         <image name="TableIcon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JTr-0f-7Lh"/>
+        <segue reference="UrZ-Wj-zDN"/>
     </inferredMetricsTieBreakers>
 </document>
